server/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: gateway
spec:
  selector:
    app:
  type: ClusterIP
  ports:
    - port: 8880
      targetPort: 8880
      protocol: TCP
